# EasierTag

./: .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.flatpak-builder/checksums/: x86_64-net.fhannenheim.EasierTag.Devel.json
.github/workflows/: ci.yml
build-aux/: net.fhannenheim.EasierTag.Devel.json
data/: net.fhannenheim.EasierTag.desktop.in.in  net.fhannenheim.EasierTag.gschema.xml.in  net.fhannenheim.EasierTag.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: filecolumnview.ui  folderbrowser.ui  folderitem.ui  window.ui
po/: POTFILES.in
src/: application.rs  main.rs  taggablefile.rs  window.rs
src/filecolumnview/: mod.rs
src/folderbrowser/: folderitem.rs  mod.rs
src/taggablefile/: mod.rs  taggablefilelist.rs
