[package]
name = "easier-tag"
version = "0.1.0"
authors = ["Frieder Hannenheim <frieder.hannenheim@pm.me>"]
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5", package = "gtk4" }
adw = { version= "*", package = "libadwaita" }
log = "0.4"
once_cell = "1.14"
pretty_env_logger = "0.4"
audiotags = "0.4.1"
